from ucommon 6.1.0 to 6.1.1
- module flag support for older commoncpp packages
- fix for commoncpp pc file
- some additional original classes mapped to commoncpp
- default Semaphore constructor now valid!

from ucommon 6.0.7 to 6.1.0
- small fixes based on notes from Tristan
- exception behavior is changed (fixed) for commoncpp
- keywait utility added

from ucommon 6.0.6 to 6.0.7
- error state in fsys open fixed
- fsys error reset inline added

from ucommon 6.0.5 to 6.0.6
- small cleanup of useless validator assignments
- fix gnutls casting and warnings
- modernized automake support

from ucommon 6.0.4 to 6.0.5
- additional constructors to pass pre-allocated memory

from ucommon 6.0.3 to 6.0.4
- fix for address list comparison issue

from ucommon 6.0.2 to 6.0.3
- fixes for older gnutls releases

from ucommon 6.0.1 to 6.0.2
- digest stream operators
- auto memory erasing keystring and keyrandom template
- common code shared for secure library
- some fixes for gnutls support

from ucommon 6.0.0 to 6.0.1
- fixes for gnutls support
- elimination of gcrypt in gnutls

from ucommon 5.5.1 to 6.0.0
- new version 6 api
- fixed string + concat operation
- made StringPager proper base class by naming conventions
- new device access mode and name checking for fsys
- fbuf refocused on process pipe and device access
- more consistent abi naming conventions
- depreciated methods removed
- access base classes now consistent with protocols
- reorg of datetime classes
- allocation and access fault handling

from ucommon 5.5.0 to 5.5.1
- regex checks also for lib, mingw support
- pedantic cleanup of mingw
- anaselli fix for applog and pipes

from ucommon 5.4.3 to 5.5.0
- mapof and listof added
- semaphore default for commoncpp set to 0
- simplify config, no longer separate stdlib and compat
- resolved issues with XOPEN_SOURCE and broken BSD headers 
- many mingw 32 and 64 bit fixes, build fixes for out of source binary builds

from ucommon 5.4.2 to 5.4.3